# sp1-lido-accounting-zk

./: .dockerignore  .env.example  .gitignore  .gitmodules  .sccignore  .solhint.json  .solhintignore  Cargo.toml  Dockerfile  Dockerfile.test  LICENSE-MIT  README.md  justfile  rust-toolchain  set_env.sh  update_metadata.sh
.github/: dependabot.yml
.github/workflows/: combined-ci.yml  contracts-ci.yml  coverage.yml  docker-build.yml  rust-ci.yml  security.yml
contracts/: .gitignore  foundry.toml
contracts/script/: Deploy.s.sol  deploy_manifesto_anvil.json  deploy_manifesto_mainnet.json  deploy_manifesto_sepolia.json
contracts/src/: HashConsensusStub.sol  ISecondOpinionOracle.sol  (+6 more)
crates/dev_script/: Cargo.toml
crates/dev_script/examples/: balance_proof.rs  gen_synthetic_bs_pair.rs  lido_state.rs  list_multiproofs.rs  read_bs_pair.rs  report.rs  ssz_e2e_test.rs
crates/dev_script/src/lib/: lib.rs  scripts.rs  synthetic.rs
crates/dev_script/src/lib/scripts/: deploy.rs  execute.rs  store_report.rs  write_test_fixture.rs
crates/program/: Cargo.toml
crates/script/: Cargo.toml  build.rs
crates/script/examples/: balance_proof.rs  gen_synthetic_bs_pair.rs  read_bs_pair.rs  report.rs  ssz_e2e_test.rs
crates/script/src/lib/: beacon_state_reader.rs  consts.rs  deploy.rs  env.rs  eth_client.rs  lib.rs  prometheus_metrics.rs  proof_storage.rs  sp1_client_wrapper.rs  tracing.rs  utils.rs  validator_delta.rs
crates/script/src/lib/beacon_state_reader/: file.rs  reqwest.rs  synthetic.rs
crates/script/src/lib/scripts/: prelude.rs  shared.rs  submit.rs  write_test_fixture.rs
crates/script/tests/: beason_state_serde_tests.rs  data_tampering_tests.rs  integration_tests.rs  program_input.rs  program_input_tampering_tests.rs  report_tampering_tests.rs
crates/script/tests/data/beacon_states/: bs_1200.ssz  bs_1621090.ssz  bs_1621090_header.json  bs_1646720.ssz  bs_1646720_header.json  bs_1871356.ssz  bs_1871356_header.json  bs_1890000.ssz  bs_1890000_header.json  bs_5832096.ssz  bs_5832096_header.json  bs_5928800_header.json  bs_6946176.ssz  bs_6946176_header.json  bs_7700384.ssz  bs_7998592.ssz  bs_7998592_header.json  bs_8288.ssz  bs_8288_header.json
crates/script/tests/data/deploy/: anvil-hoodi-1621090-deploy.json  anvil-hoodi-1646720-deploy.json  anvil-hoodi-1871356-deploy.json  anvil-sepolia-5832096-deploy.json  anvil-sepolia-7643456-deploy.json
crates/script/tests/data/proofs/: fixture.json
crates/script/tests/data/withdrawal_vault_account_proofs/: vault_data_1646720.json  vault_data_1890000.json  vault_data_7998592.json  vault_data_8288.json
crates/script/tests/test_utils/: env.rs  eth_consensus_layer_gen.rs  files.rs  mod.rs  tampering_bs.rs
crates/service/: Cargo.toml  build.rs
crates/service/src/lib/: common.rs  lib.rs  scheduler.rs  server.rs
crates/shared/: Cargo.toml
crates/shared/src/lib/: circuit_logic.rs  eth_consensus_layer.rs  eth_spec.rs  lib.rs  lido.rs  merkle_proof.rs  util.rs
crates/shared/src/lib/circuit_logic/: input_verification.rs  io.rs  report.rs
crates/shared/src/lib/io/: eth_io.rs  program_io.rs
dev_script/: Cargo.toml
docker/: docker_build_bootstrap.sh  entrypoint.sh  healthcheck.sh
elf/: riscv32im-succinct-zkvm-elf
metadata/: README.md  audit_sloc.json  audit_sloc.txt  deps_licenses.txt  solidity_report.md  total_sloc.json  total_sloc.txt
program/: Cargo.toml
program/src/: main.rs
program/src/lib/: eth_consensus_layer.rs  eth_execution_layer.rs  eth_spec.rs  merkle_proof.rs
program/src/lib/io/: program_io.rs
report_matcher/: .env.example  README.md  hardhat.config.ts  package.json
script/: Cargo.toml  build.rs
script/examples/: balance_proof.rs  gen_synthetic_bs_pair.rs  lido_state.rs  list_multiproofs.rs  read_bs_pair.rs  report.rs  ssz_e2e_test.rs
script/src/lib/: beacon_state_reader.rs  beacon_state_reader_enum.rs  consts.rs  deploy.rs  eth_client.rs  lib.rs  proof_storage.rs  script_logic.rs  scripts.rs  sp1_client_wrapper.rs  tracing.rs  utils.rs  validator_delta.rs
script/src/lib/beacon_state_reader/: file.rs  reqwest.rs  synthetic.rs
script/src/lib/scripts/: deploy.rs  execute.rs  pre_deploy.rs  prelude.rs  shared.rs  submit.rs  write_test_fixture.rs
script/test/: end_to_end.rs
script/tests/: adversarial_oracle_tests.rs  data_tampering_tests.rs  deploy_test.rs  integration_tests.rs  program_input.rs  program_input_tampering_tests.rs  report_tampering_tests.rs  rust_deploy.rs  test_utils.rs
script/tests/data/: anvil-sepolia-deploy.json
script/tests/data/beacon_states/: bs_5887808.ssz  bs_5887808_header.json  bs_5928800.ssz  bs_6789600.ssz  bs_6789600_header.json  bs_7643456.ssz  bs_7643456_header.json  bs_7643648.ssz  bs_7643648_header.json  bs_7700384_header.json
script/tests/data/deploy/: anvil-sepolia-5832096-deploy.json
script/tests/data/proofs/: fixture.json  proof_anvil-sepolia_5930016.json
script/tests/data/withdrawal_vault_account_proofs/: vault_data_6946176.json  vault_data_7643648.json  vault_data_7696704.json  vault_data_7700384.json
script/tests/test_utils/: env.rs  files.rs  mod.rs  tampering_bs.rs
service/: Cargo.toml
shared/: Cargo.toml
shared/examples/: gen_synthetic_bs_pair.rs  lido_state.rs  list_multiproofs.rs  read_bs_pair.rs  report.rs  ssz_e2e_test.rs  synthetic_beacon_state_reader.rs  util.rs
shared/examples/util/: synthetic_beacon_state_reader.rs
shared/src/lib/: beacon_state_reader.rs  circuit_logic.rs  consts.rs  eth_consensus_layer.rs  eth_spec.rs  hashing.rs  io.rs  lib.rs  lido.rs  merkle_proof.rs  program_io.rs  public_input.rs  report.rs  synthetic_beacon_state_reader.rs  util.rs  verification.rs
shared/src/lib/beacon_state_reader/: file.rs  local_synthetic.rs  reqwest.rs  synthetic.rs
shared/src/lib/circuit_logic/: input_verification.rs  io.rs  report.rs
shared/src/lib/io/: eth_io.rs  program_io.rs  serde_utils.rs
shared/tests/: validator_sparse_proof.rs
synthetic_beacon_state_gen/: constants.py  eth_consensus_layer.py  eth_ssz_utils.py  main.py  pyproject.toml  read_bs.py  report.py
test_contracts/: .gitignore  foundry.toml
(+28 files in other folders)
