[workspace]
resolver = "2"
members = [
    "program",
    "script",
    # "shared",
    "macros/merkle_tree_field_leaves_derive"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
arbitrary = "1.4.1"
alloy = { version = "0.9.2", features = ["contract", "json", "providers", "signer-local", "signers", "sol-types", "network"] }
alloy-rlp = { version = "0.3.10", features = ["derive"] }
alloy-primitives = { version = "0.8.18", features = ["serde", "rlp"] }
alloy-sol-types = "0.8.18"
anyhow = "1.0.95"
derive_more = { version = "1", features = ["debug"] }
dotenvy = "0.15.7"
ethereum_hashing = "0.7.0"
ethereum_serde_utils = "0.7.0"
ethereum_ssz = "0.8.2"
ethereum_ssz_derive = "0.8.2"
ethereum-types = {version = "0.15.1", features = ["arbitrary"] }
eth_trie = "0.5.0"
hex = "0.4.3"
hex-literal = "0.4.1"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.24"
proptest = "1.6.0"
proptest-arbitrary-interop = "0.1.0"
rand = "0.8.5"
reqwest = "0.12.12"
rs_merkle = "1.4.2"
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
serde_derive = "1.0.217"
serde_json = { version = "1.0.135", default-features = false, features = ["alloc"] }
simple_logger = "5.0.0"
sp1-core-machine = "4.0.1"
sp1-derive = "4.0.1"
sp1-helper = "4.0.1"
sp1-sdk = {version = "4.0.1", features = ["network"] }
sp1-zkvm = "4.0.1"
ssz_types = { version = "0.10.0", features = ["arbitrary"] }
thiserror = "2.0.11"
tokio = "1.43.0"
tracing = "0.1.41"
tree_hash = "0.9.0"
tree_hash_derive = "0.9.0"
typenum = "1.17.0"

# "Reexporting" workspace members
# so that sp1_lido_accounting_zk_shared.workspace = true works
sp1_lido_accounting_zk_shared = { path = "program" }
sp1_lido_accounting_zk_shared_merkle_tree_leaves_derive = { path = "macros/merkle_tree_field_leaves_derive" }


[workspace.devDependencies]
cargo-license = "0.6.1"
cargo-bundle-licenses = "2.0.0"

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
ethereum_hashing = { git = "https://github.com/sp1-patches/ethereum_hashing", branch = "sp1-patch-0.7.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }