[workspace]
resolver = "2"
members = [
    "crates/dev_script",
    "crates/program",
    "crates/script",
    "crates/service",
    "crates/shared",
    "crates/macros/merkle_tree_field_leaves_derive"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
alloy = { version = "1", features = ["contract", "json", "providers", "signer-local", "signers", "sol-types", "network"] }
alloy-primitives = { version = "1.3", features = ["serde", "rlp"] }
alloy-sol-types = "1"
arbitrary = "1.4"
alloy-rlp = { version = "0.3.12", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"
derive_more = { version = "2.0", features = ["debug"] }
dotenvy = "0.15.7"
ethereum_hashing = "0.7.0"
ethereum_serde_utils = "0.8"
ethereum_ssz = "0.9"
ethereum_ssz_derive = "=0.9"
ethereum-types = {version = "0.15.1", features = ["arbitrary"] }
eth_trie = "0.6.1"
eyre = "0.6.12"
hex = "0.4.3"
hex-literal = "1"
itertools = "0.14.0"
json-subscriber = "0.2"
k256 = "0.13.4"
lazy_static = "1.5"
log = "0.4.27"
prometheus = "0.14"
proptest = "1.7"
proptest-arbitrary-interop = "0.1"
rand = "0.9"
reqwest = "0.12"
rs_merkle = "1.5"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_derive = "1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
simple_logger = "5.0"
sp1-derive = "5.2.1"
sp1-helper = "5.2.1"
sp1-sdk = {version = "5.2.1", features = ["network"] }
sp1-zkvm = "5.2.1"
superstruct = "0.8.0"
syn-solidity = "1.3"
thiserror = "2.0"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-forest = "0.2"
tracing-subscriber = {version="0.3.20", features=["std", "fmt", "json"]}
tree_hash = "0.10"
tree_hash_derive = "0.10"
typenum = "1.18"
# ssz_types = { version = "0.12.0", features = ["arbitrary", "cap-typenum-to-usize-overflow"], path = "../../ssz_types"  }
ssz_types = { git = "https://github.com/lidofinance/ssz_types", features = ["arbitrary", "cap-typenum-to-usize-overflow"] }

sp1-lido-accounting-zk-shared = { path = "crates/shared" }
sp1-lido-accounting-zk-scripts = { path = "crates/script" }
sp1-lido-accounting-zk-shared-merkle-tree-leaves-derive = { path = "crates/macros/merkle_tree_field_leaves_derive" }


[workspace.devDependencies]
cargo-license = "0.6.1"
cargo-bundle-licenses = "2.0.0"

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
ethereum_hashing = { git = "https://github.com/sp1-patches/ethereum_hashing", branch = "sp1-patch-0.7.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
