[package]
version.workspace = true
edition.workspace = true
name = "sp1-lido-accounting-zk-script"
default-run = "execute"

[[bin]]
name = "write_test_fixture"
path = "src/bin/dev/write_test_fixture.rs"

[[bin]]
name = "execute"
path = "src/bin/dev/execute.rs"

[[bin]]
name = "submit_cached"
path = "src/bin/dev/submit_cached.rs"

[[bin]]
name = "submit"
path = "src/bin/submit.rs"

[[bin]]
name = "deploy"
path = "src/bin/dev/deploy.rs"

[[example]]
name = "ssz_e2e_test"
path = "examples/ssz_e2e_test.rs"
required-features = ["synthetic"]

[[example]]
name = "report_e2e_test"
path = "examples/report.rs"
required-features = ["synthetic"]

[[example]]
name = "lido_state_e2e_test"
path = "examples/lido_state.rs"
required-features = ["synthetic"]

[[example]]
name = "gen_pair"
path = "examples/gen_synthetic_bs_pair.rs"
required-features = ["synthetic"]

[[example]]
name = "list_multiproofs"
path = "examples/list_multiproofs.rs"
required-features = ["synthetic"]

[[example]]
name = "read_bs_pair"
path = "examples/read_bs_pair.rs"

[lib]
name = "sp1_lido_accounting_scripts"
path = "src/lib/lib.rs"

[dependencies]
alloy.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
anyhow.workspace = true
ethereum_serde_utils.workspace = true
ethereum_ssz_derive.workspace = true
ethereum_ssz.workspace = true
hex.workspace = true
hex-literal.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
simple_logger.workspace = true
# TOOO: this seems to be an internal crate, but SP1PUblicValues were
# moved there and aren't reexported, so this is a workaround until it is fixed
sp1-core-machine.workspace = true
sp1-sdk.workspace = true
tokio.workspace = true
tree_hash.workspace = true

clap = { version = "4.0", features = ["derive", "env"] }
eyre = "0.6.12"
k256 = "0.13.3"
reqwest = "0.12.7"
sp1_lido_accounting_zk_shared = { path = "../shared" }
thiserror = "1.0.64"
tracing = "0.1.40"

[build-dependencies]
sp1-helper.workspace = true

[dev-dependencies]
alloy = { version = "0.2.1", features = ["node-bindings"] }
dotenv = "0.15.0"
lazy_static = "1.5.0"
typenum.workspace = true

[features]
synthetic = []
# Used in integration - see tests/test_utils.rs
# test_network_prover = [] 
