[package]
version.workspace = true
edition.workspace = true
license.workspace = true
name = "sp1-lido-accounting-zk-script"
default-run = "execute"

[[bin]]
name = "write_test_fixture"
path = "src/bin/dev/write_test_fixture.rs"
test = false

[[bin]]
name = "execute"
path = "src/bin/dev/execute.rs"
test = false


[[bin]]
name = "submit_cached"
path = "src/bin/dev/submit_cached.rs"
test = false

[[bin]]
name = "submit"
path = "src/bin/submit.rs"
test = false

[[bin]]
name = "deploy"
path = "src/bin/dev/deploy.rs"
test = false

[[example]]
name = "ssz_e2e_test"
path = "examples/ssz_e2e_test.rs"
required-features = ["synthetic"]
test = false

[[example]]
name = "report_e2e_test"
path = "examples/report.rs"
required-features = ["synthetic"]
test = false

[[example]]
name = "lido_state_e2e_test"
path = "examples/lido_state.rs"
required-features = ["synthetic"]
test = false

[[example]]
name = "gen_pair"
path = "examples/gen_synthetic_bs_pair.rs"
required-features = ["synthetic"]
test = false

[[example]]
name = "list_multiproofs"
path = "examples/list_multiproofs.rs"
required-features = ["synthetic"]
test = false

[[example]]
name = "read_bs_pair"
path = "examples/read_bs_pair.rs"
test = false

[[example]]
name = "balance_proof"
path = "examples/balance_proof.rs"
test = false

[lib]
name = "sp1_lido_accounting_scripts"
path = "src/lib/lib.rs"

[dependencies]
alloy.workspace = true
alloy-rlp.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
anyhow.workspace = true
ethereum_serde_utils.workspace = true
ethereum_ssz_derive.workspace = true
ethereum_ssz.workspace = true
eth_trie.workspace = true
eyre.workspace = true
hex.workspace = true
hex-literal.workspace = true
k256.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
simple_logger.workspace = true
sp1-sdk.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-forest.workspace = true
tracing-subscriber.workspace = true
tree_hash.workspace = true

clap = { version = "4.0", features = ["derive", "env"] }
sp1-lido-accounting-zk-shared.workspace = true

[build-dependencies]
sp1-helper.workspace = true

[dev-dependencies]
alloy = { version = "=0.12.6", features = ["node-bindings"] }
typenum.workspace = true
dotenvy.workspace = true
lazy_static.workspace = true
rand.workspace = true

[features]
synthetic = []
# Used in integration - see tests/test_utils.rs
# test_network_prover = [] 
