[package]
version.workspace = true
edition.workspace = true
license.workspace = true
name = "sp1-lido-accounting-zk-scripts"
default-run = "submit"

[[bin]]
name = "submit"
path = "src/bin/submit.rs"
test = false

[lib]
name = "sp1_lido_accounting_scripts"
path = "src/lib/lib.rs"

[dependencies]
alloy.workspace = true
alloy-rlp.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
anyhow.workspace = true
ethereum_serde_utils.workspace = true
ethereum_ssz_derive.workspace = true
ethereum_ssz.workspace = true
eth_trie.workspace = true
eyre.workspace = true
hex.workspace = true
hex-literal.workspace = true
k256.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
simple_logger.workspace = true
sp1-sdk.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-forest.workspace = true
tracing-subscriber.workspace = true
tree_hash.workspace = true

clap = { version = "4.0", features = ["derive", "env"] }
sp1-lido-accounting-zk-shared.workspace = true

[build-dependencies]
sp1-helper.workspace = true

[dev-dependencies]
alloy = { version = "=0.12.6", features = ["node-bindings"] }
typenum.workspace = true
dotenvy.workspace = true
lazy_static.workspace = true
rand.workspace = true

[features]
synthetic = []
