[workspace]
[package]
version = "0.1.0"
name = "sp1_lido_accounting_zk_shared"
edition = "2021"

[lib]
name = "sp1_lido_accounting_zk_shared"
path = "src/lib/lib.rs"

[[example]]
name = "ssz_e2e_test"
path = "examples/ssz_e2e_test.rs"
required-features = ["synthetic_bs_reader"]

[[example]]
name = "report_e2e_test"
path = "examples/report.rs"
required-features = ["synthetic_bs_reader"]

[[example]]
name = "lido_state_e2e_test"
path = "examples/lido_state.rs"
required-features = ["synthetic_bs_reader"]

[[example]]
name = "gen_pair"
path = "examples/gen_synthetic_bs_pair.rs"
required-features = ["synthetic_bs_reader"]

[[example]]
name = "list_multiproofs"
path = "examples/list_multiproofs.rs"
required-features = ["synthetic_bs_reader"]

[[example]]
name = "read_bs_pair"
path = "examples/read_bs_pair.rs"
required-features = ["reqwest"]

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_derive = "1.0.204"
anyhow = "1.0.86"
alloy-sol-types = "0.7.2"
ethereum_ssz = "0.5.4"
ethereum_serde_utils = "0.5.2"
ethereum_ssz_derive = "0.5.4"
ssz_types = "0.6.0"
ethereum-types = "0.14.1"
hex = "0.4.3"
tree_hash_derive = "0.6.0"
tree_hash = "0.6.0"
typenum = "1.17.0"
rs_merkle = "1.4.2"
hex-literal = "0.4.1"
log = "0.4.21"
ethereum_hashing = "0.6.0"
itertools = "0.13.0"
reqwest = { version = "0.12.7", features = ["json"], optional = true }

[dev-dependencies]
dotenv = "0.15.0"
log = "0.4.21"
simple_logger = "5.0.0"
tokio = { version = "1.38.0", features = ["full"] }


[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
ethereum_hashing = { path = "../../../ethereum_hashing" }

[features]
synthetic = []
reqwest = ["dep:reqwest"]
