[package]
version.workspace = true
edition.workspace = true
name = "sp1_lido_accounting_zk_shared"

[lib]
name = "sp1_lido_accounting_zk_shared"
path = "src/lib/lib.rs"


# All other creates depend on shared
# so essentially shared's dependencies
# are everyone's dependencies.
# Hence, they are managed at workspace level
[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
derivative.workspace = true
ethereum_hashing.workspace = true
ethereum_serde_utils.workspace = true
ethereum_ssz_derive.workspace = true
ethereum_ssz.workspace = true
ethereum-types.workspace = true
hex.workspace = true
itertools.workspace = true
log.workspace = true
rs_merkle.workspace = true
serde_derive.workspace = true
serde.workspace = true
ssz_types.workspace = true
tree_hash_derive.workspace = true
tree_hash.workspace = true
typenum.workspace = true

[dev-dependencies]
arbitrary.workspace = true
hex-literal.workspace = true
proptest.workspace = true
proptest-arbitrary-interop.workspace = true