[tool.poetry]
name = "synthetic-beacon-state-gen"
version = "0.1.0"
description = ""
authors = ["color-typea <colorcode6a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
hexbytes = "^1.2.1"
ssz = "^0.5.0"
click = "^8.1.7"
dataclasses-json = "^0.6.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
