[package]
version.workspace = true
edition.workspace = true
license.workspace = true
name = "sp1-lido-accounting-zk-program"

[[bin]]
name = "sp1-lido-accounting-zk-program"
path = "src/bin/main.rs"

[dependencies]
alloy-sol-types.workspace = true
sp1-derive.workspace = true
sp1-zkvm.workspace = true
sp1-lido-accounting-zk-shared.workspace = true
tree_hash.workspace = true
