[package]
version.workspace = true
edition.workspace = true
license.workspace = true
name = "sp1-lido-accounting-zk-script"
default-run = "execute"

[[bin]]
name = "write_test_fixture"
path = "src/bin/dev/write_test_fixture.rs"
test = false

[[bin]]
name = "execute"
path = "src/bin/dev/execute.rs"
test = false


[[bin]]
name = "submit_cached"
path = "src/bin/dev/submit_cached.rs"
test = false

[[bin]]
name = "submit"
path = "src/bin/submit.rs"
test = false

[[bin]]
name = "deploy"
path = "src/bin/dev/deploy.rs"
test = false

[[example]]
name = "ssz_e2e_test"
path = "examples/ssz_e2e_test.rs"
required-features = ["synthetic"]
test = false

[[example]]
name = "report_e2e_test"
path = "examples/report.rs"
required-features = ["synthetic"]
test = false

[[example]]
name = "lido_state_e2e_test"
path = "examples/lido_state.rs"
required-features = ["synthetic"]
test = false

[[example]]
name = "gen_pair"
path = "examples/gen_synthetic_bs_pair.rs"
required-features = ["synthetic"]
test = false

[[example]]
name = "list_multiproofs"
path = "examples/list_multiproofs.rs"
required-features = ["synthetic"]
test = false

[[example]]
name = "read_bs_pair"
path = "examples/read_bs_pair.rs"
test = false

[[example]]
name = "balance_proof"
path = "examples/balance_proof.rs"
test = false

[lib]
name = "sp1_lido_accounting_scripts"
path = "src/lib/lib.rs"

[dependencies]
alloy.workspace = true
alloy-rlp.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
anyhow.workspace = true
ethereum_serde_utils.workspace = true
ethereum_ssz_derive.workspace = true
ethereum_ssz.workspace = true
eth_trie.workspace = true
hex.workspace = true
hex-literal.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
simple_logger.workspace = true
# TOOO: this seems to be an internal crate, but SP1PUblicValues were
# moved there and aren't reexported, so this is a workaround until it is fixed
sp1-core-machine.workspace = true
sp1-sdk.workspace = true
tokio.workspace = true
thiserror.workspace = true
tree_hash.workspace = true

clap = { version = "4.0", features = ["derive", "env"] }
eyre = "0.6.12"
k256 = "0.13.3"
reqwest = "0.12.7"
sp1-lido-accounting-zk-shared.workspace = true
tracing = "0.1.40"

[build-dependencies]
sp1-helper.workspace = true

[dev-dependencies]
alloy = { version = "0.9.2", features = ["node-bindings"] }
typenum.workspace = true
dotenvy.workspace = true
lazy_static.workspace = true
rand.workspace = true

[features]
synthetic = []
# Used in integration - see tests/test_utils.rs
# test_network_prover = [] 
