[package]
version.workspace = true
edition.workspace = true
license.workspace = true
name = "sp1-lido-accounting-zk-scripts"
default-run = "submit"

[[bin]]
name = "submit"
path = "src/bin/submit.rs"
test = false

[lib]
name = "sp1_lido_accounting_scripts"
path = "src/lib/lib.rs"

[dependencies]
alloy.workspace = true
alloy-rlp.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
anyhow.workspace = true
chrono.workspace=true
derive_more.workspace = true
ethereum_serde_utils.workspace = true
ethereum_ssz_derive.workspace = true
ethereum_ssz.workspace = true
eth_trie.workspace = true
eyre.workspace = true
hex.workspace = true
hex-literal.workspace = true
json-subscriber.workspace = true
k256.workspace = true
lazy_static.workspace=true
prometheus.workspace=true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
simple_logger.workspace = true
sp1-sdk.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-forest.workspace = true
tracing-subscriber.workspace = true
tree_hash.workspace = true

clap = { version = "4.0", features = ["derive", "env"] }
sp1-lido-accounting-zk-shared.workspace = true

[build-dependencies]
sp1-helper.workspace = true

[dev-dependencies]
alloy = { version = "1", features = ["node-bindings"] }
# ==== cargo edition and rustc compatibility ====
# These dependencies are pinned to a concrete version as a compatibility mechanism between new version of the crates
# (moving on oo edition=2024 and rust-version=1.85) and sp1 compiler that's based on rustc=1.82
# This can be unpinned when sp1 rustc moves to at least 1.85
# 1.2.0 requires rust >= 1.85, sp1 uses 1.82-dev
alloy-primitives = { version = "=1.1.3", features = ["arbitrary", "serde", "rlp", "getrandom"] }
syn-solidity = "=1.1.3"
# ==== cargo edition and rustc compatibility ====
typenum.workspace = true
dotenvy.workspace = true
lazy_static.workspace = true
rand.workspace = true
