[package]
name = "sp1-lido-accounting-zk-service"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "service"
path = "src/bin/service.rs"
test = false

[lib]
name="sp1_lido_accounting_service_lib"
path="src/lib/lib.rs"

[dependencies]
axum = {version="0.8.4", features=["macros"]}
anyhow.workspace = true
hex.workspace=true
prometheus.workspace=true
tokio.workspace = true
tower-http = { version = "0.6.4", features = ["trace"] }
tracing.workspace=true
serde.workspace = true
serde_json.workspace = true
sp1-lido-accounting-zk-scripts.workspace = true
sp1-lido-accounting-zk-shared.workspace = true
axum-macros = "0.5.0"
cron = "0.15"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10.3"

[build-dependencies]
anyhow.workspace=true
vergen = { version = "9", features = ["build", "cargo"] }
vergen-git2 = { version = "1.0.0", features = ["build"] }