[package]
version.workspace = true
edition.workspace = true
license.workspace = true
name = "sp1-lido-accounting-zk-shared"

[lib]
name = "sp1_lido_accounting_zk_shared"
path = "src/lib/lib.rs"


# All other creates depend on shared
# so essentially shared's dependencies
# are everyone's dependencies.
# Hence, they are managed at workspace level
[dependencies]
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-sol-types.workspace = true
derive_more.workspace = true
ethereum_hashing.workspace = true
ethereum_serde_utils.workspace = true
ethereum_ssz_derive.workspace = true
ethereum_ssz.workspace = true
ethereum-types.workspace = true
eth_trie.workspace = true
hex.workspace = true
itertools.workspace = true
rs_merkle.workspace = true
serde_derive.workspace = true
serde.workspace = true
ssz_types.workspace = true
thiserror.workspace = true
tracing.workspace = true
tree_hash_derive.workspace = true
tree_hash.workspace = true
typenum.workspace = true

sp1-lido-accounting-zk-shared-merkle-tree-leaves-derive.workspace = true

[dev-dependencies]
arbitrary.workspace = true
hex-literal.workspace = true
proptest.workspace = true
proptest-arbitrary-interop.workspace = true
rand.workspace = true
alloy-primitives = { version = "1.3", features = ["arbitrary", "serde", "rlp", "getrandom"] }
syn-solidity = "1.3"
